# WCP50

./: CMakeLists.txt  JuanRaoDetect.cpp  JuanRaoDetect.h  MIGRATION_GUIDE.md  README.md  build.sh  example_usage.cpp  plugin_registry.cpp  test_plugin.cpp  yolo_kernel.cu  yolo_plugin.cpp  yololayer.h  yolov5_d.cpp
